organizar codigo